Trivial test case showing why dependency needs to be on the module path.